corrected spacing issues and added error function

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  background: #a21232;
+  background: radial-gradient(
+    circle at 50.4% 50.5%,
+    rgb(206, 18, 18) 0%,
+    rgb(122, 21, 21) 90%
+  );
 }
 
 .App-header {
@@ -17,5 +21,7 @@ footer {
 }
 footer p {
   font-size: 12px;
-  color: #666;
+  color: #fff;
+  margin-bottom: 0px;
+  padding-bottom: 20px;
 }
